force-app/main/default/objects/Web_Caller_Endpoint__mdt/Web_Caller_Endpoint__mdt.object-meta.xml
<CustomObject>
    <description>Contains details for a Web Service Endpoint accessible via the Web Caller tool</description>
    <label>Web Caller Endpoint</label>
    <pluralLabel>Web Caller Endpoints</pluralLabel>
</CustomObject>