force-app/main/default/objects/Web_Caller_Endpoint__mdt/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Address for End point - ie. www.endpoint.com</description>
    <label>Address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>