force-app/main/default/objects/Web_Caller_Endpoint__mdt/fields/Port__c.field-meta.xml
<CustomField>
    <fullName>Port__c</fullName>
    <description>Desired Port for communications - ie. 80 or 443</description>
    <inlineHelpText>Desired Port for communications - ie. 80 or 443</inlineHelpText>
    <label>Port</label>
    <length>6</length>
    <type>Text</type>
</CustomField>