force-app/main/default/objects/Web_Caller_Endpoint__mdt/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <description>Selected Protocol for end point data transmission</description>
    <inlineHelpText>Selected Protocol for end point data transmission</inlineHelpText>
    <label>Protocol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HTTP</fullName>
                <default>true</default>
                <label>HTTP</label>
            </value>
            <value>
                <fullName>HTTPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>